--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-html-parser": "^2.0.2",
+    "react-redux": "^7.0.1",
+    "redux": "^4.0.1",
     "watch": "^1.0.2"
   },
   "devDependencies": {
@@ -41,6 +43,7 @@
     "lint-staged": "^10.2.11",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
+    "redux-devtools-extension": "^2.13.8",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.6",
