--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-html-parser": "^2.0.2",
     "react-redux": "^7.0.1",
     "redux": "^4.0.1",
+    "shortid": "^2.2.15",
     "watch": "^1.0.2"
   },
   "devDependencies": {
