Task 16.6. Zadanie: Publikacja projekt.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "webpack-dev-server --mode development --open --hot",
     "build": "webpack --mode production",
-    "lint": "eslint src/"
+    "lint": "eslint src/",
+    "server": "json-server --port 3131 --no-cors --delay 250 --watch dist/db/app.json"
   },
   "husky": {
     "hooks": {
