--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-html-parser": "^2.0.2",
     "react-redux": "^7.0.1",
     "react-router-dom": "^5.0.0",
+    "react-router-transition": "^1.4.0",
     "redux": "^4.0.1",
     "shortid": "^2.2.15",
     "watch": "^1.0.2"
